[FIX] Cambiar texto de botón por demo, Ajustar imagen de la ruta terminal en móvil y comprimir diseño de la ruta raiz para que el footer sea visible en proyecto de int.store

--- a/src/components/Style/Home2.scss
+++ b/src/components/Style/Home2.scss
@@ -97,6 +97,6 @@ body {
 
 .home-component-modified {
   @media (max-width: 800px) {
-    padding-top: 2.5vh;
+    padding-top: 0vh;
   }
 }
